--- a/package.json
+++ b/package.json
@@ -1,32 +1,53 @@
 {
   "name": "@uixprt/react-lib",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/uixprt"
-  },
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "A simple template for a custom React component library",
+  "license": "MIT",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts",
-  "license": "MIT",
-  "packageManager": "yarn@3.1.1",
   "scripts": {
     "build": "rollup -c",
-    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,css,scss,md}'",
+    "test": "jest"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.7",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.2",
     "@rollup/plugin-typescript": "^8.3.0",
+    "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.8",
     "@types/react": "^17.0.38",
+    "autoprefixer": "^10.4.1",
+    "babel-jest": "^27.4.6",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.4.6",
+    "postcss": "^8.4.5",
     "prettier": "^2.5.1",
+    "prettier-plugin-packagejson": "^2.2.15",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rollup": "^2.63.0",
     "rollup-plugin-dts": "^4.1.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.45.2",
+    "source-map-support": "^0.5.21",
+    "ts-node": "^10.4.0",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4"
-  }
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/uixprt"
+  },
+  "packageManager": "yarn@3.1.1"
 }
